fix:prev-next alignment

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/prev-next-topic.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/prev-next-topic.less
@@ -36,9 +36,7 @@
 
 html.adobeguides-text-spacing.adobeguides-text-size{
   .prev-next-topic {
-    .gu-pre-next-wrapper {
-    float: initial;
-  }
+   
   .gu-pre-next-topic_text {
     
     white-space: nowrap;
@@ -61,4 +59,11 @@ html.adobeguides-text-spacing.adobeguides-text-size{
    }
 
   }
+ }
+ @media (min-width: 1024px) {
+.prev-next-topic {
+   .gu-pre-next-wrapper {
+    float: right;
+  }
+}
  }
