--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/prev-next-topic.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/prev-next-topic.less
@@ -106,6 +106,13 @@
       margin-top: -0.3rem;
     }
   }
+   @media (min-width: 1024px) {
+  .gu-next-topic_container-wrapper ,
+   .gu-pre-topic_container-wrapper {
+width:50%;
+
+  }
+}
 }
 
 html#adobeguides-dark-contrast {
